--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt": "^1.0.2",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-compass": "^1.1.1",
+    "grunt-php": "^1.5.1",
     "load-grunt-tasks": "^3.5.2"
   }
 }
